--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<div id="coral_talk_stream"></div>
 	<script src="http://127.0.0.1:3000/static/embed.js" async onload="Coral.Talk.render(document.getElementById('coral_talk_stream'), {
     talk: 'http://127.0.0.1:3000/'
+    asset_url: 'https://amenimh.github.io/testwebsite/index.html'
   });"></script>
 </body>
 
