--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-	article>
+	<article>
         <h1>My First Blog Post</h1>
         <img src="https://example.com/image.jpg" alt="A beautiful image">
         <h2>A Subheading</h2>
