--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
       
       article {
-        background-color: ;
+        background-color: rgb(236, 152, 42);
         padding: 20px;
         border-radius: 5px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
